[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/fonts/font-data/font-read.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/main-menu/CompendiumRecipeDisplay.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/ui/book/recipe_page.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ui/book/mastery_bar.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/book/mastery_bg.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/book/arrow.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/book/mastery_border.png" type="Texture" id=8]
[ext_resource path="res://assets/images/recipe-icons/dano.png" type="Texture" id=9]
[ext_resource path="res://assets/shaders/painting_shader_material.tres" type="Material" id=10]
[ext_resource path="res://game/tooltip/TooltipCollision.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=7]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 137, 32 )

[sub_resource type="DynamicFont" id=10]
size = 22
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )
modulate_color = Color( 0.537255, 1, 0, 1 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="DynamicFont" id=6]
size = 160
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="CompendiumRecipeDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
rect_min_size = Vector2( 307, 385 )
rect_pivot_offset = Vector2( 153, 192 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -8.0
margin_bottom = -115.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.99997
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 15
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 15.0
margin_top = 30.0
margin_right = 289.0
margin_bottom = 370.0
rect_min_size = Vector2( 272, 205 )
custom_constants/separation = -30

[node name="TitleContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_right = 274.0
margin_bottom = 40.0

[node name="VSeparator" type="VSeparator" parent="Background/MarginContainer/VBoxContainer/TitleContainer"]
margin_right = 45.0
margin_bottom = 40.0
custom_constants/separation = 45

[node name="Title" type="Label" parent="Background/MarginContainer/VBoxContainer/TitleContainer"]
margin_left = 49.0
margin_right = 274.0
margin_bottom = 40.0
rect_min_size = Vector2( 225, 40 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "RECIPE NAME"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_left = 1.0
margin_top = 10.0
margin_right = 273.0
margin_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0

[node name="Left" type="CenterContainer" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 123.0
margin_bottom = 200.0
rect_min_size = Vector2( 123, 200 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/VBoxContainer/HBoxContainer/Left"]
margin_left = 61.0
margin_top = 100.0
margin_right = 61.0
margin_bottom = 100.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="CenterContainer" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 148.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2

[node name="Arrow" type="TextureRect" parent="Background/MarginContainer/VBoxContainer/HBoxContainer/Middle"]
margin_top = 75.0
margin_right = 25.0
margin_bottom = 125.0
texture = ExtResource( 7 )

[node name="Right" type="CenterContainer" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 148.0
margin_right = 272.0
margin_bottom = 200.0
rect_min_size = Vector2( 124, 200 )
mouse_filter = 2

[node name="ReagentList" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/HBoxContainer/Right"]
margin_left = 60.0
margin_top = 100.0
margin_right = 64.0
margin_bottom = 100.0

[node name="LeftColumn" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HBoxContainer/Right/ReagentList"]

[node name="RightColumn" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/HBoxContainer/Right/ReagentList"]
margin_left = 4.0
margin_right = 4.0

[node name="Description" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 180.0
margin_right = 274.0
margin_bottom = 204.0
size_flags_vertical = 8
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -6
custom_fonts/font = SubResource( 2 )
align = 1
autowrap = true

[node name="TooltipCollision" parent="Background/MarginContainer/VBoxContainer/Description" instance=ExtResource( 11 )]
position = Vector2( 135, 31 )

[node name="CollisionShape2D" parent="Background/MarginContainer/VBoxContainer/Description/TooltipCollision" index="0"]
shape = SubResource( 11 )

[node name="TooltipPosition" parent="Background/MarginContainer/VBoxContainer/Description/TooltipCollision" index="1"]
position = Vector2( 149, -30 )

[node name="MemorizationLabel" type="Label" parent="Background"]
margin_left = 15.0
margin_top = 272.0
margin_right = 287.0
margin_bottom = 305.0
rect_min_size = Vector2( 272, 33 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Memorization 0/5 - Level 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MemorizationProgress" type="ProgressBar" parent="Background"]
margin_left = 24.0
margin_top = 307.0
margin_right = 274.0
margin_bottom = 337.0
rect_min_size = Vector2( 250, 30 )
mouse_filter = 2
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="TextureRect" parent="Background/MemorizationProgress"]
margin_left = -7.35626
margin_top = -4.44223
margin_right = 262.644
margin_bottom = 37.5578
texture = ExtResource( 8 )
expand = true

[node name="Icon" type="TextureRect" parent="."]
material = ExtResource( 10 )
margin_left = 10.0
margin_top = 22.0
margin_right = 65.0
margin_bottom = 77.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UnknownBG" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 0.0588235, 0.027451, 0.0196078, 0.913725 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UnknownBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -118.5
margin_right = 35.5
margin_bottom = 118.5
custom_fonts/font = SubResource( 6 )
text = "?"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 307, 385 )

[connection signal="disable_tooltip" from="Background/MarginContainer/VBoxContainer/Description/TooltipCollision" to="." method="_on_TooltipCollision_disable_tooltip"]
[connection signal="enable_tooltip" from="Background/MarginContainer/VBoxContainer/Description/TooltipCollision" to="." method="_on_TooltipCollision_enable_tooltip"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Background/MarginContainer/VBoxContainer/Description/TooltipCollision"]
